24.07.16 improve the insert codes not to send the number field on the query